--- a/templates/country_search.html
+++ b/templates/country_search.html
@@ -53,15 +53,35 @@
 
     </div>
 
+<meta id="my-data" data-name="{{text}}">
 
 {% endblock %}
 
 
 {% block scripts %}
-<script src="https://www.amcharts.com/lib/4/core.js"></script>
-<script src="https://www.amcharts.com/lib/4/charts.js"></script>
-<script src="https://www.amcharts.com/lib/4/plugins/wordCloud.js"></script>
-<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
-<script src="{{ url_for('static', filename='js/word-cloud.js') }}"></script>
+<script>
+  // Themes begin
+// Themes begin
+am4core.useTheme(am4themes_animated);
+// Themes end
+
+
+var chart = am4core.create("chartdiv", am4plugins_wordCloud.WordCloud);
+var series = chart.series.push(new am4plugins_wordCloud.WordCloudSeries());
+
+series.accuracy = 4;
+series.step = 15;
+series.rotationThreshold = 0.7;
+series.maxCount = 200;
+series.minWordLength = 2;
+series.labels.template.tooltipText = "{word}: {value}";
+series.fontFamily = "Courier New";
+series.maxFontSize = am4core.percent(50);
+
+var images_numbers = eval($('#my-data').data());
+series.text = images_numbers["name"];
+
+</script>
+
 {% endblock %}
 
