--- a/templates/layout.html
+++ b/templates/layout.html
@@ -296,7 +296,10 @@
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="{{ url_for('static', filename='js/d3-tip.js') }}"></script>
 
-
+<script src="https://www.amcharts.com/lib/4/core.js"></script>
+<script src="https://www.amcharts.com/lib/4/charts.js"></script>
+<script src="https://www.amcharts.com/lib/4/plugins/wordCloud.js"></script>
+<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
 
 {% block scripts %}{% endblock %}
 </body>
