--- a/templates/main.html
+++ b/templates/main.html
@@ -47,7 +47,9 @@
 {% endblock %}
 
 {% block secondSection %}
-
+  <h2 class="section-title">
+    Word Cloud
+  </h2>
 <div id="chartdiv"></div>
 
 {% endblock %}
