change name and add README

--- a/templates/main.html
+++ b/templates/main.html
@@ -16,9 +16,8 @@
 {% block startBlock %}
   <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="heading-count">
-        <h3> WROG </h3>
-          <h4> Where Are the wOrld Going <br>
-          Customized Retrieval System for news in the World</h4>
+        <h2> Fika news </h2>
+          <h4> Customized Retrieval System for news in the World</h4>
     </div>
   </div>
   <div class="col-md-12 col-sm-12 col-xs-12">
