--- a/templates/country_search.html
+++ b/templates/country_search.html
@@ -25,8 +25,8 @@
 {% block startBlock %}
   <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="heading-count">
-        <h3> WROG </h3>
-          <h4> Where Are the wOrld Going <br>
+        <h2> Fika news </h2>
+          <h4> 
           Customized Retrieval System for news in the World</h4>
     </div>
   </div>
