change project name

--- a/templates/main.html
+++ b/templates/main.html
@@ -2,41 +2,40 @@
 
 {% block header %}
   <li class="nav-item">
-    <a class="nav-link" href="#firstSection">Search by Country</a>  
+    <a class="nav-link" href="#firstSection">Search by Country</a>
   </li>
 
-{% endblock %} 
+{% endblock %}
 
 {% block headerMobile %}
   <li class="nav-item">
-    <a class="nav-link" href="#firstSection">Search by Country</a>  
+    <a class="nav-link" href="#firstSection">Search by Country</a>
   </li>
 {% endblock %}
 
 {% block startBlock %}
   <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="heading-count">
-        <h3> WROG </h3>
-          <h4> Where Are the wOrld Going <br>
-          Customized Retrieval System for news in the World</h4>
+        <h3> Fika News </h3>
+          <h5> Din Löpsedel Fika</h5>
     </div>
   </div>
   <div class="col-md-12 col-sm-12 col-xs-12">
     <a href="#firstSection" class="btn btn-common">CHECK THE WORLD MAP</a>
   </div>
 {% endblock %}
-    
+
 {% block firstSection %}
   <h2 class="section-title">
     Search by Country
   </h2>
 
   <form action = " " method="post" enctype = "multipart/form-data" onsubmit="loading()">
-    
+
     <div class="row">
       <div class="col-md-12" id="map-div"></div>
       <!-- thirdSection form
-      
+
 
               <iframe width='100%' height='520' frameborder='0' src='https://gdelt.carto.com/viz/b15eddb4-f806-11e4-9b7d-0e9d821ea90d/embed_map' allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>  -->
     </div>
@@ -176,4 +175,3 @@ series.text = images_numbers["name"];
 
 </script>
 {% endblock %}
-
