--- a/templates/country_search.html
+++ b/templates/country_search.html
@@ -25,9 +25,8 @@
 {% block startBlock %}
   <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="heading-count">
-        <h3> WROG </h3>
-          <h4> Where Are the wOrld Going <br>
-          Customized Retrieval System for news in the World</h4>
+      <h3> Fika News </h3>
+        <h4>Din Löpsedel Fika</h4>
     </div>
   </div>
   <div class="col-md-12 col-sm-12 col-xs-12">
@@ -48,8 +47,8 @@
       			 <button class="btn btn-border" type = "submit" name = "return_main_tab"> HOME PAGE </button>
       		</form>
       		<div id="chartdiv"></div>
-      </div>
-
+      <!--</div>
+-->
 
     </div>
 
@@ -106,7 +105,9 @@
 						</div>
 					</div>
 			{% endfor %}
-		</div> 
+		</div>
+<!--<iframe src="https://api.gdeltproject.org/api/v2/doc/doc?query=(%22islamic%20state%22%20OR%20isis%20OR%20daesh)&mode=artlist&maxrecords=100&timespan=1week&sourcecountry={{country}}" frameborder="0" allowfullscreen
+      style="top:0;left:0;width:100%;height:100%;"></iframe>-->
 {% endblock %}
 
 
