--- a/templates/country_search.html
+++ b/templates/country_search.html
@@ -97,8 +97,10 @@
 								<div class="thirdSection-overlay">
 									<div class="overlay-social-icon text-center">
 										<ul class="social-icons">
-											<li><a href="{{url_new}}" target="_blank"><button class="btn btn-common">
-                                                Read</button></a></li>
+											<li>
+                        <a href="{{url_new}}" target="_blank">
+                        <button class="btn btn-common">Read</button></a>
+                      </li>
 										</ul>
 									</div>
 								</div>
@@ -107,14 +109,12 @@
 					</div>
 			{% endfor %}
 		</div>
-<!--<iframe src="https://api.gdeltproject.org/api/v2/doc/doc?query=(%22islamic%20state%22%20OR%20isis%20OR%20daesh)&mode=artlist&maxrecords=100&timespan=1week&sourcecountry={{country}}" frameborder="0" allowfullscreen
-      style="top:0;left:0;width:100%;height:100%;"></iframe>-->
+
 {% endblock %}
 
 
 {% block scripts %}
 <script>
-  // Themes begin
 // Themes begin
 am4core.useTheme(am4themes_animated);
 // Themes end
