--- a/templates/main.html
+++ b/templates/main.html
@@ -34,10 +34,6 @@
 
     <div class="row">
       <div class="col-md-12" id="map-div"></div>
-      <!-- thirdSection form
-
-
-              <iframe width='100%' height='520' frameborder='0' src='https://gdelt.carto.com/viz/b15eddb4-f806-11e4-9b7d-0e9d821ea90d/embed_map' allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>  -->
     </div>
   </form>
 
@@ -94,8 +90,8 @@ svg.call(tip);
 
 queue()
     //.defer(d3.json, "world_countries.json")
-    .defer(d3.json, "{{ url_for('static', filename='world_countries.json') }}")
-    .defer(d3.tsv, "{{ url_for('static', filename='world_population.tsv') }}")
+    .defer(d3.json, "{{ url_for('static', filename='data/world_countries.json') }}")
+    .defer(d3.tsv, "{{ url_for('static', filename='data/world_population.tsv') }}")
     //.defer(d3.tsv, "world_population.tsv")
     .await(ready);
 
